common-managed/apps/multiapp/service-vms.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multiapp
  name: multiapp-vms
spec:
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
  selector:
    myvmi: multiapp
  sessionAffinity: None
  type: ClusterIP
