common-managed/apps/multiapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multiapp
  name: multiapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: multiapp
  sessionAffinity: None
  type: ClusterIP
