common-managed/apps/multiapp/route-lb.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: multiapp
  name: multiapp-lb
spec:
  host: multiapp.lb.example.lab
  port:
    targetPort: 8080
  to:
    kind: Service
    name: multiapp
    weight: 100
  wildcardPolicy: None
