common-managed/apps/multiapp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: multiapp
  name: multiapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: multiapp
    weight: 100
  wildcardPolicy: None
